--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,4 +8,19 @@ ul {
 
 li {
   display: inline;
+  padding: 5px 5px;
+  text-decoration: none;
+}
+
+.left1 {
+}
+
+.left2 {
+}
+
+.right1 {
+}
+
+
+.right2 {
 }
