--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,12 @@
 /* CSS Google-Homepage Style Sheet */
-* {
-  margin: 0;
-  padding: 0;
-}
 
 body {
+  margin: 0 auto;
+  width: 50%;
   font-family: arial, sans-serif;
   font-size: 13px
+  padding: 10px;
+  text-align: center;
 }
 
 li {
@@ -15,20 +15,27 @@ li {
 }
 
 ul {
-  width: auto;
   display: inline;
 }
 
 a {
   text-decoration: none;
   color: dimgrey;
+  text-align: center;
+
 }
 
-.nav-bar {
-  height: 30px;
-  top: 10px;
+img {
+  padding-top: 200px;
+  padding-bottom: 10px;
 }
 
-.nbl li {
-  text-size: 150px;
+.nbl {
+  float: left;
+  padding-left: 150px;
+
+}
+
+.nbr {
+  float: right;
 }
