--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0 auto;
-  width: 50%;
+  width: 100%;
   font-family: arial, sans-serif;
   font-size: 13px
   padding: 10px;
@@ -19,10 +19,9 @@ ul {
 }
 
 a {
-  text-decoration: none;
   color: dimgrey;
   text-align: center;
-
+  text-decoration: none;
 }
 
 img {
@@ -32,10 +31,10 @@ img {
 
 .nbl {
   float: left;
-  padding-left: 150px;
-
+  padding-left: 15px;
 }
 
 .nbr {
   float: right;
+  padding-right: 15px
 }
